[tool.poetry]
name = "totoro-lab"
version = "0.1.0"
description = ""
authors = ["Anastasiia-MAriia Kovalyshyn <anastasiyakovalyshyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pandas = "^2.1.1"
pyspark = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
